# 2DShadowCast

./: CMakeLists.txt  README.md  config.txt
include/: canvas.h  config.h  ray.h  wall.h
src/: canvas.cpp  config.cpp  main.cpp  ray.cpp  wall.cpp
